Fix z-index phone bubble

--- a/src/components/phone-bubble/PhoneBubble.scss
+++ b/src/components/phone-bubble/PhoneBubble.scss
@@ -4,6 +4,7 @@
   position: fixed;
   bottom: 15px;
   right: 20px;
+  z-index: 100;
 
   @media (min-width: $min-768) {
     bottom: 75px;
